Add mock data and update images

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,21 +1,23 @@
 html {
     height: 100%;
 }
+
 body {
     min-height: 100%;
 }
 
 .hero {
     background-blend-mode: multiply;
-    background: rgba(0, 0, 0, .3) url("../images/home/lily-banse--YHSwy6uqvk-unsplash.jpg") center / cover no-repeat;
+    background: rgba(0, 0, 0, .3) url("../images/hero.jpg") center / cover no-repeat;
     height: 55vh;
 }
 
-.card-hover {
-    transition: box-shadow 250ms, border 50ms;
+.card {
+    transition: 250ms;
 }
 
-.card-hover:hover {
+.card:hover {
     border: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    transform: scale(1.1);
 }
