--- a/templates/categories.html
+++ b/templates/categories.html
@@ -8,120 +8,28 @@
     </header>
     <div class="container">
         <div class="row">
+            {% for category in categories %}
+
             <div class="col-md-4 p-4">
-                <div class="card card-hover mx-auto">
+                <div class="card mx-auto">
                     <div class="row no-gutters">
                         <div class="col-6 col-md-12">
                             <img class="card-img-top img-fluid"
-                                 src="../static/images/categories/max-griss-cToNEm70cvE-unsplash.jpg"
-                                 style="object-fit: cover; height: 200px;"
-                                 alt="">
+                                 src="{{ url_for('static',filename=category.image) }}"
+                                 style=" object-fit: cover; height: 200px;"
+                            alt="{{ category.title }}">
                         </div>
                         <div class="col-6 col-md-12">
                             <div class="card-body">
-                                <h2 class="card-title">Soups</h2>
-                                <p class="card-text">Hardy, healthy soups</p>
+                                <h2 class="card-title">{{ category.title }}</h2>
+                                <p class="card-text">{{ category.description }}</p>
                             </div>
                         </div>
                     </div>
-                    <a href="{{ url_for('show_recipes') }}" class="stretched-link"></a>
+                    <a href="{{ url_for('show_recipes', category=category.name) }}" class="stretched-link"></a>
                 </div>
             </div>
-            <div class="col-md-4 p-4">
-                <div class="card card-hover mx-auto">
-                    <div class="row no-gutters">
-                        <div class="col-6 col-md-12">
-                            <img class="card-img-top img-fluid"
-                                 src="../static/images/categories/isabella-mendes-3UUu_WDdOXw-unsplash.jpg"
-                                 style="object-fit: cover; height: 200px;"
-                                 alt="">
-                        </div>
-                        <div class="col-6 col-md-12">
-                            <div class="card-body">
-                                <h2 class="card-title">Quick Snacks</h2>
-                                <p class="card-text">Fast made food</p>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="{{ url_for('show_recipes') }}" class="stretched-link"></a>
-                </div>
-            </div>
-            <div class="col-md-4 p-4">
-                <div class="card card-hover mx-auto">
-                    <div class="row no-gutters">
-                        <div class="col-6 col-md-12">
-                            <img class="card-img-top img-fluid"
-                                 src="../static/images/categories/edward-howell-vvUy1hWVYEA-unsplash.jpg"
-                                 style="object-fit: cover; height: 200px;"
-                                 alt="">
-                        </div>
-                        <div class="col-6 col-md-12">
-                            <div class="card-body">
-                                <h2 class="card-title">Full Meals</h2>
-                                <p class="card-text">Filling, well-balanced, full meals</p>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="{{ url_for('show_recipes') }}" class="stretched-link"></a>
-                </div>
-            </div>
-            <div class="col-md-4 p-4">
-                <div class="card card-hover mx-auto">
-                    <div class="row no-gutters">
-                        <div class="col-6 col-md-12">
-                            <img class="card-img-top img-fluid"
-                                 src="../static/images/categories/kobby-mendez-idTwDKt2j2o-unsplash.jpg"
-                                 style="object-fit: cover; height: 200px;"
-                                 alt="">
-                        </div>
-                        <div class="col-6 col-md-12">
-                            <div class="card-body">
-                                <h2 class="card-title">Desserts</h2>
-                                <p class="card-text">Mindful sweets</p>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="{{ url_for('show_recipes') }}" class="stretched-link"></a>
-                </div>
-            </div>
-            <div class="col-md-4 p-4">
-                <div class="card card-hover mx-auto">
-                    <div class="row no-gutters">
-                        <div class="col-6 col-md-12">
-                            <img class="card-img-top img-fluid"
-                                 src="../static/images/categories/eiliv-sonas-aceron-uAm1CZMdPCw-unsplash.jpg"
-                                 style="object-fit: cover; height: 200px;"
-                                 alt="">
-                        </div>
-                        <div class="col-6 col-md-12">
-                            <div class="card-body">
-                                <h2 class="card-title">Breakfast</h2>
-                                <p class="card-text">Healthy morning meals</p>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="{{ url_for('show_recipes') }}" class="stretched-link"></a>
-                </div>
-            </div>
-            <div class="col-md-4 p-4">
-                <div class="card card-hover mx-auto">
-                    <div class="row no-gutters">
-                        <div class="col-6 col-md-12">
-                            <img class="card-img-top img-fluid"
-                                 src="../static/images/categories/natalia-y-ljVSRqHCP2U-unsplash.jpg"
-                                 style="object-fit: cover; height: 200px;"
-                                 alt="">
-                        </div>
-                        <div class="col-6 col-md-12">
-                            <div class="card-body">
-                                <h2 class="card-title">Lunch</h2>
-                                <p class="card-text">Mid-day nutrition</p>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="{{ url_for('show_recipes') }}" class="stretched-link"></a>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </section>
