--- a/templates/index.html
+++ b/templates/index.html
@@ -15,38 +15,38 @@
         <div class="row g-4">
             <div class="col-lg-3 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="../static/images/home/jude-infantini-rYOqbTcGp1c-unsplash.jpg"
+                    <img class="card-img-top" src="../static/images/recipes/jude-infantini-rYOqbTcGp1c-unsplash.jpg"
                          style="object-fit: cover; height: 200px;"
                          alt="Featured dish">
 
-                    <a href="#" class="stretched-link"></a>
+                    <a href="./recipes/1" class="stretched-link"></a>
                 </div>
             </div>
             <div class="col-lg-3 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="../static/images/home/danijela-prijovic-qits91IZv1o-unsplash.jpg"
+                    <img class="card-img-top" src="../static/images/recipes/danijela-prijovic-qits91IZv1o-unsplash.jpg"
                          style="object-fit: cover; height: 200px;"
                          alt="Featured dish">
 
-                    <a href="#" class="stretched-link"></a>
+                    <a href="./recipes/3" class="stretched-link"></a>
                 </div>
             </div>
             <div class="col-lg-3 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="../static/images/home/ella-olsson-fxJTl_gDh28-unsplash.jpg"
+                    <img class="card-img-top" src="../static/images/recipes/ella-olsson-fxJTl_gDh28-unsplash.jpg"
                          style="object-fit: cover; height: 200px;"
                          alt="Featured dish">
 
-                    <a href="#" class="stretched-link"></a>
+                    <a href="./recipes/2" class="stretched-link"></a>
                 </div>
             </div>
             <div class="col-lg-3 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="../static/images/home/anna-pelzer-IGfIGP5ONV0-unsplash.jpg"
+                    <img class="card-img-top" src="../static/images/recipes/anna-pelzer-IGfIGP5ONV0-unsplash.jpg"
                          style="object-fit: cover; height: 200px;"
                          alt="Featured dish">
 
-                    <a href="#" class="stretched-link"></a>
+                    <a href="./recipes/4" class="stretched-link"></a>
                 </div>
             </div>
         </div>
