--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="{{ url_for('index')}}">Fit Foods</a>
+        <img class="navbar-brand" href="{{ url_for('index')}}" src="../static/images/logo.png/" height="50px">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsableNav"
                 aria-controls="collapsableNav" aria-expanded="false" aria-label="Toggle nav">
             <span class="navbar-toggler-icon"></span>
